[Founders] Fix positional issues on smaller screens

--- a/src/sass/_all.scss
+++ b/src/sass/_all.scss
@@ -1139,12 +1139,12 @@ body {
                         .founderBenefits {
                             font-size: 18px;
                             padding-right: 20px;
-                            padding-bottom: 10px;
+                            // padding-bottom: 10px;
                             font-family: "Gotham-Light", sans-serif;
                             .benefitPair {
                                 display: flex;
                                 align-items: center;
-                                margin-top: 15px;
+                                margin-top: 1.4vh;
                                 .count {
                                     color: rgb(21 22 23);
                                     background-color: $color-bronze;
@@ -1185,7 +1185,8 @@ body {
                         position: absolute;
                         left: 46%;
                         overflow: scroll;
-                        height: calc(100vh - 12.8vh);
+                        top: $header-height;
+                        height: calc(100vh - #{$header-height});
                     }
                     .founderHeadline,
                     .founderTagline,
